<resources>
    <string name="app_name">TikTokDownloader</string>
    <string name="tab_download">Download</string>
    <string name="tab_history">History</string>
    <string name="clear_description">clear</string>
    <string name="url_hint">Paste URL here</string>
    <string name="button_open">Open TikTok</string>
    <string name="button_paste">Paste</string>
    <string name="install_tik_tok">Please install TikTok</string>
    <string name="go_install">Go to install</string>

    //Drawer
    <string name="drawer_downloader">Downloader for instragram</string>
    <string name="drawer_rate">Rate us</string>
    <string name="drawer_recommend">Recommend for friends</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_privacy">Privacy politics</string>

    //Toasts
    <string name="not_tik_tok_url">Its not TikTok url. Please retry</string>
    <string name="video_deleted">Video was deleted</string>
    <string name="share_text">Check out TikTok downloader app:</string>

    //Privacy
    <string name="privacy_title">Privacy politics</string>
    <string name="privacy_message">
        <b>We are committed to protecting your privacy</b>
        \n\n We collect the minimum amount of information about you that is commensurate with providing you with a
        satisfactory service. This policy indicates the type of processes that may result in data being collected about
        you. Your use of this website gives us the right to collect that information. \n\n  <b>Information Collected</b> \n\n
        We may collect any or all of the information that you give us depending on the type of transaction you enter
        into, including your name, address, telephone number, and email address, together with data about your use of
        the website. Other information that may be needed from time to time to process a request may also be collected
        as indicated on the website. \n\n <b>Information Use</b> \n\n We use the information collected primarily to
        process the task for which you visited the website. Data collected in the UK is held in accordance with the Data
        Protection Act. All reasonable precautions are taken to prevent unauthorised access to this information. This
        safeguard may require you to provide additional forms of identity should you wish to obtain information about
        your account details. \n\n <b>Cookies</b> \n\n Your Internet browser has the in-built facility for storing small
        files - \"cookies\" - that hold information which allows a website to recognise your account. Our website takes
        advantage of this facility to enhance your experience. You have the ability to prevent your computer from
        accepting cookies but, if you do, certain functionality on the website may be impaired. \n\n <b>Disclosing
        Information
    </b> \n\n We do not disclose any personal information obtained about you from this website to third parties unless
        you permit us to do so by ticking the relevant boxes in registration or competition forms. We may also use the
        information to keep in contact with you and inform you of developments associated with us. You will be given the
        opportunity to remove yourself from any mailing list or similar device. If at any time in the future we should
        wish to disclose information collected on this website to any third party, it would only be with your knowledge
        and consent. We may from time to time provide information of a general nature to third parties - for example,
        the number of individuals visiting our website or completing a registration form, but we will not use any
        information that could identify those individuals. In addition Dummy may work with third parties for the purpose
        of delivering targeted behavioural advertising to the Dummy website. Through the use of cookies, anonymous
        information about your use of our websites and other websites will be used to provide more relevant adverts
        about goods and services of interest to you. For more information on online behavioural advertising and about
        how to turn this feature off, please visit youronlinechoices.com/opt-out. \n\n <b>Changes to this Policy</b> \n\n
        Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will
        take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we
        suggest that you read this document each time you use the website to ensure that it still meets with your
        approval. \n\n <b>Contacting Us</b> \n\n If you have any questions about our Privacy Policy, or if you want to
        know what information we have collected about you, please email us at techx1406@gmail.com. You can also correct
        any factual errors in that information or require us to remove your details form any list under our control.
    </string>

    //Feedback
    <string name="have_problem">Have a problem? Please share it with us and we will do our best to solve it!</string>
    <string name="developer_email" translatable="false">application.development.studio@gmail.com</string>
    <string name="instruction_title">Instruction</string>

    <string name="download_button">Download</string>

    <string name="rating_title">Rate the app</string>
    <string name="positive_rate">Maybe later</string>
    <string name="negative_rate">Never</string>

    <string name="share_video">Sharing</string>

    <string name="feed_title">Feedback</string>
    <string name="send_btn">Submit</string>
    <string name="close_btn">Close</string>
    <string name="feed_hint">Suggest</string>

    <string name="error_downloading">Error on download</string>

    //ADS
    <string name="facebook_app_id">2051460464907599</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="download_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="video_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="gallery_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

</resources>
