<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:id="@+id/feed_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/feed_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/feed_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/feed_text"
            android:layout_width="0dp"
            android:layout_height="152dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="bottom"
            android:hint="@string/feed_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feed_title"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/feed_text">

        <TextView
                android:id="@+id/close_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close_btn"
                android:textAlignment="center"
                android:textSize="18sp"/>

        <TextView
                android:id="@+id/send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send_btn"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="22sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>