<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/card_url">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_url"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/button_clear"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/url_hint"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:singleLine="true"
                    android:background="@color/white"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_clear"
                    android:id="@+id/button_clear"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/white"
                    android:contentDescription="@string/clear_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/button_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_paste"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_tiktok"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/card_url"/>
    <Button
            android:text="@string/button_open"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/button_tiktok"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintStart_toEndOf="@+id/button_paste"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@+id/button_paste"
            app:layout_constraintBottom_toBottomOf="@+id/button_paste" android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/button_paste"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="10dp"
            android:id="@+id/card_instruction">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="Instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="22sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="false"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>